2017-05-16  Yusuke Suzuki  <utatane.tea@gmail.com>

        [DFG] Constant Folding Phase should convert MakeRope("", String) => Identity(String)
        https://bugs.webkit.org/show_bug.cgi?id=172115

        Reviewed by Saam Barati.

        * stress/constant-folding-should-fold-make-rope-with-empty-strings.js: Added.
        (shouldBe):
        (unknown):
        (readWord1):
        (readWord2):
        (readWord3):
        (readWord4):

2017-05-16  JF Bastien  <jfbastien@apple.com>

        WebAssembly: add memory fuzzer
        https://bugs.webkit.org/show_bug.cgi?id=169976
        <rdar://problem/31965328>

        Reviewed by Keith Miller.

        * wasm/fuzz/memory.js: Added.
        (const.insert):
        (const.action.string_appeared_here):
        (const.performAction):
        (catch):

2017-05-16  JF Bastien  <jfbastien@apple.com>

        WebAssembly: validate load / store alignment
        https://bugs.webkit.org/show_bug.cgi?id=168836
        <rdar://problem/31965349>

        Reviewed by Keith Miller.

        * wasm/WASM.js: fix regular expression greed
        * wasm/function-tests/memory-alignment.js: Added.
        (const.op.of.WASM.opcodes):
        * wasm/wasm.json: fix formatting

2017-05-15  Mark Lam  <mark.lam@apple.com>

        Rolling out r214038 and r213697: Crashes when using computed properties with rest destructuring and object spread.
        https://bugs.webkit.org/show_bug.cgi?id=172147

        Rubber-stamped by Saam Barati.

        * stress/object-rest-deconstruct.js: Removed.
        * stress/object-spread.js: Removed.

2017-05-11  JF Bastien  <jfbastien@apple.com>

        WebAssembly: stop supporting 0xD
        https://bugs.webkit.org/show_bug.cgi?id=168788
        <rdar://problem/31880922>

        Reviewed by Saam Barati.

        Test that only version 1 is supported.

        * wasm/js-api/version.js: Added.

2017-05-10  JF Bastien  <jfbastien@apple.com>
