@@ -1,3 +1,12 @@
+2017-05-17  Filip Pizlo  <fpizlo@apple.com>
+
+        JSC: Incorrect LoadVarargs handling in ArgumentsEliminationPhase::transform
+        https://bugs.webkit.org/show_bug.cgi?id=172208
+
+        Reviewed by Saam Barati.
+
+        * dfg/DFGArgumentsEliminationPhase.cpp:
+
 2017-05-17  Don Olmstead  <don.olmstead@am.sony.com>
 
         [Win] Support $vm.getpid()
